nginx-rollouts-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-rollouts-demo
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: nginx-rollouts-demo
